# ai-agents-sdk

./: .gitignore  ARCHITECTURE.md  README.md  go.mod  pyproject.toml  requirements.txt
.cursor/: mcp.json.example
.cursor/plans/: ai_agents_go_sdk_992671d9.plan.md  ai_sdk_cost_quality_improvements_d317f167.plan.md  langgraph_pipeline_migration_17fab0b8.plan.md
.ven/: pyvenv.cfg
ai/agents/: builder.go  builder_test.go  reviewer.go  reviewer_test.go
ai/cache/: index.go  index_test.go
ai/context/: repo_context.go  repo_context_test.go
ai/llm/: claude_client.go
ai/runner/: go_runner.go
cmd/ai-engineer/: main.go
docs/: HOWTO.md  MCP_SETUP.md  VALIDATE.md
scripts/: helper.sh  validate.sh
sdk/: sdk.go
src/ai_agents_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/pipeline/: __init__.py  api.py  config.py  extractor.py  graph.py  main.py  mcp_server.py  state.py
src/pipeline/llm/: claude.py  client.py
src/pipeline/nodes/: architect.py  coder.py  devops.py  reviewer.py
src/pipeline/tools/: __init__.py  git_push.py  gosec.py  lint.py  validate.py  write_files.py
