[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agents-pipeline"
version = "0.1.0"
description = "LangGraph pipeline for Go coding agents"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.2",
    "anthropic>=0.39",
]

[project.scripts]
pipeline = "pipeline.main:main"

[tool.setuptools.packages.find]
where = ["src"]
