[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agents-pipeline"
version = "0.2.0"
description = "LangGraph pipeline for Go coding agents - Architect, Coder, Reviewer, DevOps"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.2",
    "langchain-openai>=0.2",
    "anthropic>=0.39",
    "mcp>=1.0",
]

[project.scripts]
pipeline = "pipeline.main:main"
pipeline-mcp = "pipeline.mcp_server:main"


[tool.setuptools.packages.find]
where = ["src"]
